2apl/resources/tests/Good/Messages/harrysally.mas
harry : harry.2apl
sally : sally.2apl
