2apl/resources/tests/Bad/Non Existing Environment/test.mas
test: agent.2apl @noworld
